[gd_scene load_steps=20 format=3 uid="uid://bhkd51qijugrl"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_rnys3"]
[ext_resource type="FontFile" uid="uid://cy7jd4p2pgj8f" path="res://assets/monogram-extended.ttf" id="2_11f3l"]
[ext_resource type="AudioStream" uid="uid://cuajb438kc0wt" path="res://assets/audio/enemy_hit.ogg" id="3_r3y4e"]
[ext_resource type="AudioStream" uid="uid://cjfukcy6nq64d" path="res://assets/audio/player_hit.ogg" id="4_brne3"]
[ext_resource type="AudioStream" uid="uid://cex2s0yypffe4" path="res://assets/audio/enemy_death.ogg" id="5_c08tj"]
[ext_resource type="AudioStream" uid="uid://dym4jfacj0eyd" path="res://assets/audio/menu_click.ogg" id="6_hd7yl"]
[ext_resource type="AudioStream" uid="uid://dvw3mt6f1mueg" path="res://assets/audio/intro.ogg" id="7_54550"]
[ext_resource type="AudioStream" uid="uid://pp8bjp1f3301" path="res://assets/audio/menu_select.ogg" id="8_42yko"]
[ext_resource type="AudioStream" uid="uid://xpurcm50f088" path="res://assets/audio/runaway.ogg" id="9_st7bg"]
[ext_resource type="AudioStream" uid="uid://108lv45isy7h" path="res://assets/audio/level_up.ogg" id="10_1n23b"]
[ext_resource type="AudioStream" uid="uid://ci86g1bnekrnm" path="res://assets/audio/player_death.ogg" id="11_mch5w"]
[ext_resource type="AudioStream" uid="uid://c7s4f0igxuh83" path="res://assets/audio/battle.ogg" id="12_msclj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcjq7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oamix"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qg0ci"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysjfu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kud70"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4t85v"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuqch"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rnys3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jcjq7")

[node name="ActionButtons" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(1100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -75.0
offset_right = 600.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attack" type="Button" parent="Panel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 72
theme_override_styles/pressed = SubResource("StyleBoxFlat_oamix")
theme_override_styles/focus = SubResource("StyleBoxFlat_qg0ci")
text = "Attack"

[node name="Defend" type="Button" parent="Panel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 72
theme_override_styles/pressed = SubResource("StyleBoxFlat_ysjfu")
theme_override_styles/focus = SubResource("StyleBoxFlat_kud70")
text = "Defend"

[node name="Run" type="Button" parent="Panel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 72
theme_override_styles/pressed = SubResource("StyleBoxFlat_ysjfu")
theme_override_styles/focus = SubResource("StyleBoxFlat_kud70")
text = "Run"

[node name="TextBox" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -75.0
offset_right = 550.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 72
text = "A cyclops draws near!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Label" parent="Panel/TextBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 52
text = ">>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealth" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 35.0
offset_top = 25.0
offset_right = 385.0
offset_bottom = 125.0

[node name="Label" type="Label" parent="PlayerHealth"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 48
text = "Player"

[node name="ProgressBar" type="ProgressBar" parent="PlayerHealth"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4t85v")
theme_override_styles/fill = SubResource("StyleBoxFlat_yuqch")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerHealth/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -14.5
offset_right = 56.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.929412, 0.929412, 0.929412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 48
text = "HP: 5/10"
vertical_alignment = 1

[node name="EnemyHealth" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -385.0
offset_top = 25.0
offset_right = -35.0
offset_bottom = 125.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="Label" type="Label" parent="EnemyHealth"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 48
text = "Enemy"

[node name="ProgressBar" type="ProgressBar" parent="EnemyHealth"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4t85v")
theme_override_styles/fill = SubResource("StyleBoxFlat_yuqch")
max_value = 999.0
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyHealth/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -19.0
offset_right = 72.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.929412, 0.929412, 0.929412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_11f3l")
theme_override_font_sizes/font_size = 48
text = "HP: 6/10"

[node name="AudioManager" type="Node" parent="."]

[node name="EnemyHit" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("3_r3y4e")

[node name="PlayerHit" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("4_brne3")

[node name="EnemyDeath" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("5_c08tj")

[node name="MenuClick" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("6_hd7yl")

[node name="Intro" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("7_54550")
pitch_scale = 2.0

[node name="MenuSelect" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("8_42yko")

[node name="Runaway" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("9_st7bg")

[node name="LevelUp" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("10_1n23b")

[node name="PlayerDeath" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("11_mch5w")

[node name="BattleMusic" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("12_msclj")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Panel/ActionButtons/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Panel/ActionButtons/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="Panel/ActionButtons/Run" to="." method="_on_run_pressed"]
